--- a/wheeltec_lidar_ros2/lslidar_ros2/lslidar_driver/config/lslidar_x10.yaml
+++ b/wheeltec_lidar_ros2/lslidar_ros2/lslidar_driver/config/lslidar_x10.yaml
@@ -11,7 +11,7 @@ x10:
       packet_rate: 188.0          # PCAP文件回放速率，离线解析PCAP数据时使用
 
       # 点云处理参数
-      frame_id: "laser"      # 坐标系名称
+      frame_id: "laser_link"      # RT orig laser 坐标系名称
       pointcloud_topic: "lslidar_point_cloud"  # 点云话题名
       laserscan_topic: "/scan"     # 发布 LaserScan 数据话题名称
       use_time_service: false     # 否使用授时(GPS PTP NTP)
