--- a/wheeltec_robot_nav2/param/wheeltec_params/param_senior_akm.yaml
+++ b/wheeltec_robot_nav2/param/wheeltec_params/param_senior_akm.yaml
@@ -115,10 +115,10 @@ controller_server:
       vx_std: 0.2       #Vx 的抽样标准差
       vy_std: 0.0       #Vy 的抽样标准差
       wz_std: 0.4       #Wz（角速度）的抽样标准差
-      vx_max: 0.5       #目标最大前进速度（米/秒）
-      vx_min: -0.5      #目标最大反向速度（米/秒）
+      vx_max: 0.25       # RT orig 0.5 目标最大前进速度（米/秒）
+      vx_min: -0.25      # RT orig -0.5 目标最大反向速度（米/秒）
       vy_max: 0.0       #如果使用Omni运动模型，目标最大横向速度（m/s）
-      wz_max: 2.0       #最大旋转速度（弧度/秒）
+      wz_max: 1.0       #RT orig 2.0 最大旋转速度（弧度/秒）
       ax_max: 1.5
       ax_min: -1.5
       ay_max: 0.0
@@ -159,9 +159,9 @@ controller_server:
         cost_power: 1
         repulsion_weight: 1.5 #权重参数，通常优先选择成本较低的空间中的路线。
         critical_weight: 30.0 #应用于临界碰撞的权重，用于collision_margin_distance防止近距离碰撞
-        consider_footprint: false #是否使用点成本（如果机器人是圆形的或者计算能力低）或计算 SE2 足迹成本
+        consider_footprint: true # RT orig false 是否使用点成本（如果机器人是圆形的或者计算能力低）或计算 SE2 足迹成本
         collision_cost: 10000.0 #应用于轨迹中真实碰撞的成本。
-        collision_margin_distance: 0.1 #碰撞边缘距离，应该设置在0.05-0.2之间，请确保将此参数设置为预计机器人需要穿越的最窄空间
+        collision_margin_distance: 0.2 # Rt orig 0.1 碰撞边缘距离，应该设置在0.05-0.2之间，请确保将此参数设置为预计机器人需要穿越的最窄空间
         near_goal_distance: 0.4 #靠近目标的距离（米）停止应用优先障碍物项，以允许机器人平稳地收敛到靠近障碍物的目标姿势，0.5 --> 0.6 -->0.3(Tues) 
         cost_scaling_factor: 5.0
         inflation_radius: 0.15  #膨胀半径，仅限Humble
@@ -223,8 +223,8 @@ local_costmap:
       plugins: ["voxel_layer","inflation_layer"] #插件包括:{“体素层”，“障碍层”，“膨胀层”}
       inflation_layer:                             #膨胀层参数
         plugin: "nav2_costmap_2d::InflationLayer"  #膨胀层插件。
-        cost_scaling_factor: 3.0                   #成本缩放因子，决定障碍物成本随距离的递减速度。
-        inflation_radius: 0.1                     #膨胀半径
+        cost_scaling_factor: 2.0                   #Rt orig 3.0 成本缩放因子，决定障碍物成本随距离的递减速度。
+        inflation_radius: 0.55                     #RT orig 0.1 膨胀半径
       voxel_layer:
         plugin: "nav2_costmap_2d::VoxelLayer"      #体素层插件。
         enabled: True
@@ -242,9 +242,9 @@ local_costmap:
           marking: True                             #是否启用障碍物标记功能
           data_type: "LaserScan"                    #数据类型
           raytrace_max_range: 10.0                  #控制光线追踪从代价地图中清除障碍物的最大范围 
-          raytrace_min_range: 0.0                   #控制光线追踪从代价地图中清除障碍物的最大范围 
+          raytrace_min_range: 0.1                   #RT orig 0.0控制光线追踪从代价地图中清除障碍物的最大范围 
           obstacle_max_range: 3.0                   #控制代价地图上标记障碍物的最大范围
-          obstacle_min_range: 0.0                   #控制代价地图上标记障碍物的最小范围
+          obstacle_min_range: 0.1                   #Rt orig 0.0控制代价地图上标记障碍物的最小范围
 
       always_send_full_costmap: True                 #是否每次更新时都发送完整的成本图，而不是更新
   local_costmap_client:
