--- a/wheeltec_robot_nav2/param/wheeltec_params/param_senior_akm_19jan.yaml
+++ b/wheeltec_robot_nav2/param/wheeltec_params/param_senior_akm_19jan.yaml
@@ -15,25 +15,25 @@ amcl:
     global_frame_id: "map"          #定位系统发布的坐标框架的名称
     lambda_short: 0.1               #模型 z_short 部分的指数衰减参数
     laser_likelihood_max_dist: 2.0  #在地图上进行障碍物膨胀的最大距离，用于似然场模型
-    laser_max_range: -1.0       #RT orig 100 #要考虑的最大扫描范围，-1.0 将导致使用激光报告的最大范围
+    laser_max_range: 100.0          #要考虑的最大扫描范围，-1.0 将导致使用激光报告的最大范围
     laser_min_range: -1.0           #要考虑的最小扫描范围，-1.0 将导致使用激光报告的最小范围
     laser_model_type: "likelihood_field" #使用哪种模型，
     #beam、likelihood_field 或 unlikely_field_prob。与 unlikely_field 相同，但如果启用，则包含 beamskip 功能
     max_beams: 60                   #更新过滤器时每次扫描要使用多少个均匀分布的光束。
     max_particles: 2000             #允许的最大粒子数
     min_particles: 500              #允许的最小粒子数
-    odom_frame_id: "odom"  #RT orig odom_combined #使用哪个框架进行里程计   RT orig: odom_combined
+    odom_frame_id: "odom_combined"  #使用哪个框架进行里程计
     pf_err: 0.05                    #粒子过滤器群体误差
     pf_z: 0.99                      #粒子过滤器群体密度
     recovery_alpha_fast: 0.0        #快速平均权重过滤器的指数衰减率，用于决定何时通过添加随机姿势进行恢复。
     recovery_alpha_slow: 0.0        #慢速平均权重过滤器的指数衰减率，用于决定何时通过添加随机姿势进行恢复。
-    resample_interval: 1            #RT orig 1 重采样之前所需的过滤器更新次数
+    resample_interval: 1            #重采样之前所需的过滤器更新次数
     robot_model_type: "nav2_amcl::DifferentialMotionModel" #插件类的完全限定类型。
     #选项为“nav2_amcl::DifferentialMotionModel”和“nav2_amcl::OmniMotionModel”。
     save_pose_rate: 0.5             #将最后估计的姿势和协方差存储到参数服务器的最大速率（Hz）
     sigma_hit: 0.2                 #模型的 z_hit 部分中使用的高斯模型的标准差
     tf_broadcast: true              #将其设置为 false 以防止 amcl 发布全局框架和里程计框架之间的变换
-    transform_tolerance: 1.0       #RT orig 1.0 发布转换的容差
+    transform_tolerance: 1.0        #发布转换的容差
     update_min_a: 0.2              #执行过滤器更新之前需要进行旋转运动。
     update_min_d: 0.25             #执行过滤器更新之前需要进行平移运动
     z_hit: 0.5                      #模型的 z_hit 部分的混合权重，所有使用的 z 权重之和必须为 1。
@@ -67,7 +67,7 @@ bt_navigator:
     goal_reached_tol: 0.25 #接受姿势作为目标的容忍度(m)
     global_frame: map
     robot_base_frame: base_footprint
-    odom_topic: /odom_combined #RT orig /odom_combined
+    odom_topic: /odom_combined
     bt_loop_duration: 10        #BT 执行每次迭代的持续时间（以毫秒为单位
     default_server_timeout: 20  #BT 操作节点等待操作服务器确认时的默认超时值（以毫秒为单位）
     # 'default_nav_through_poses_bt_xml' and 'default_nav_to_pose_bt_xml' are use defaults:
@@ -86,13 +86,12 @@ bt_navigator_rclcpp_node:
 
 controller_server:
   ros__parameters:
-    
     use_sim_time: False
     controller_frequency: 20.0                #运行控制器的频率
     # min_x_velocity_threshold: -0.35           #最小 x 速度阈值
     # min_y_velocity_threshold: 0.35             #最小 y 速度阈值
     # min_theta_velocity_threshold: 0.001       #最小速度阈值
-    odom_topic: /odom_combined  #RT orig /odom_combined
+    odom_topic: /odom_combined
     progress_checker_plugin: "progress_checker"
     goal_checker_plugins: ["goal_checker"]
     controller_plugins: ["FollowPath"]
@@ -115,10 +114,10 @@ controller_server:
       vx_std: 0.2       #Vx 的抽样标准差
       vy_std: 0.0       #Vy 的抽样标准差
       wz_std: 0.4       #Wz（角速度）的抽样标准差
-      vx_max: 0.25       # RT orig 0.5 目标最大前进速度（米/秒）
-      vx_min: -0.25      # RT orig -0.5 目标最大反向速度（米/秒）
+      vx_max: 0.5       #目标最大前进速度（米/秒）
+      vx_min: -0.5      #目标最大反向速度（米/秒）
       vy_max: 0.0       #如果使用Omni运动模型，目标最大横向速度（m/s）
-      wz_max: 1.0       #RT orig 2.0 最大旋转速度（弧度/秒）
+      wz_max: 2.0       #最大旋转速度（弧度/秒）
       ax_max: 1.5
       ax_min: -1.5
       ay_max: 0.0
@@ -126,7 +125,7 @@ controller_server:
       iteration_count: 1 #迭代次数
       prune_distance: 1.5 #路径上距离机器人最近点的距离（米）
       enforce_path_inversion: true
-      transform_tolerance: 0.5 #使用 TF（s）进行数据转换的时间容差 RT orig 0.1
+      transform_tolerance: 0.1 #使用 TF（s）进行数据转换的时间容差
       temperature: 0.3 #根据成本选择轨迹，0表示使用成本最佳的控制，巨大的值将导致仅取所有轨迹的平均值而不考虑成本。
       gamma: 0.015 #平滑度（高）和低能耗（低）之间的权衡,保持默认值
       motion_model: "Ackermann" #用于轨迹规划的所需运动模型。选项包括DiffDrive、Omni或Ackermann。
@@ -159,9 +158,9 @@ controller_server:
         cost_power: 1
         repulsion_weight: 1.5 #权重参数，通常优先选择成本较低的空间中的路线。
         critical_weight: 30.0 #应用于临界碰撞的权重，用于collision_margin_distance防止近距离碰撞
-        consider_footprint: true # RT orig false 是否使用点成本（如果机器人是圆形的或者计算能力低）或计算 SE2 足迹成本
+        consider_footprint: false #是否使用点成本（如果机器人是圆形的或者计算能力低）或计算 SE2 足迹成本
         collision_cost: 10000.0 #应用于轨迹中真实碰撞的成本。
-        collision_margin_distance: 0.2 # Rt orig 0.1 碰撞边缘距离，应该设置在0.05-0.2之间，请确保将此参数设置为预计机器人需要穿越的最窄空间
+        collision_margin_distance: 0.1 #碰撞边缘距离，应该设置在0.05-0.2之间，请确保将此参数设置为预计机器人需要穿越的最窄空间
         near_goal_distance: 0.4 #靠近目标的距离（米）停止应用优先障碍物项，以允许机器人平稳地收敛到靠近障碍物的目标姿势，0.5 --> 0.6 -->0.3(Tues) 
         cost_scaling_factor: 5.0
         inflation_radius: 0.15  #膨胀半径，仅限Humble
@@ -210,21 +209,20 @@ local_costmap:
     ros__parameters:
       update_frequency: 5.0    #成本地图更新频率
       publish_frequency: 2.0   #将成本图发布到话题的频率
-      global_frame: odom    #RT origineel op map  #全局框架
+      global_frame: map       #全局框架
       robot_base_frame: base_footprint  #机器人底座框架
       use_sim_time: False  #仿真时间
       rolling_window: true #成本地图是否应随机器人基座框架滚动
-      width: 2          #RT orig 3   #代价地图的宽度（m）
-      height: 2         #RT orig 3   #代价地图的高度（m）
+      width: 3             #代价地图的宽度（m）
+      height: 3            #代价地图的高度（m）
       resolution: 0.05     #代价地图1像素的分辨率，以米为单位
       #robot_radius: 0.20   #机器人半径，如果未提供足迹坐标，则使用机器人半径。
-      #footprint: "[ [-0.09, -0.185], [-0.09, 0.185], [0.4,0.185], [0.4, -0.185] ]" RT Orig
-      footprint: "[ [-0.24, -0.185], [-0.24, 0.185], [0.24,0.185], [0.24, -0.185] ]"
+      footprint: "[ [-0.09, -0.185], [-0.09, 0.185], [0.4,0.185], [0.4, -0.185] ]"
       plugins: ["voxel_layer","inflation_layer"] #插件包括:{“体素层”，“障碍层”，“膨胀层”}
       inflation_layer:                             #膨胀层参数
         plugin: "nav2_costmap_2d::InflationLayer"  #膨胀层插件。
-        cost_scaling_factor: 2.0                   #Rt orig 3.0 成本缩放因子，决定障碍物成本随距离的递减速度。
-        inflation_radius: 0.55                     #RT orig 0.1 膨胀半径
+        cost_scaling_factor: 3.0                   #成本缩放因子，决定障碍物成本随距离的递减速度。
+        inflation_radius: 0.1                     #膨胀半径
       voxel_layer:
         plugin: "nav2_costmap_2d::VoxelLayer"      #体素层插件。
         enabled: True
@@ -242,9 +240,9 @@ local_costmap:
           marking: True                             #是否启用障碍物标记功能
           data_type: "LaserScan"                    #数据类型
           raytrace_max_range: 10.0                  #控制光线追踪从代价地图中清除障碍物的最大范围 
-          raytrace_min_range: 0.3                 #RT orig 0.0控制光线追踪从代价地图中清除障碍物的最大范围 
+          raytrace_min_range: 0.0                   #控制光线追踪从代价地图中清除障碍物的最大范围 
           obstacle_max_range: 3.0                   #控制代价地图上标记障碍物的最大范围
-          obstacle_min_range: 0.0                   #Rt orig 0.0控制代价地图上标记障碍物的最小范围
+          obstacle_min_range: 0.0                   #控制代价地图上标记障碍物的最小范围
 
       always_send_full_costmap: True                 #是否每次更新时都发送完整的成本图，而不是更新
   local_costmap_client:
@@ -259,12 +257,11 @@ global_costmap:
     ros__parameters:
       update_frequency: 1.0             #成本地图更新频率
       publish_frequency: 1.0            #将成本图发布到话题的频率
-      global_frame: map    #RT was orig map            #全局框架
+      global_frame: map                 #全局框架
       robot_base_frame: base_footprint  #机器人底座框架
       use_sim_time: False               #仿真时间 
       #robot_radius: 0.20                #机器人半径
-      #footprint: "[ [-0.09, -0.185], [-0.09, 0.185], [0.4,0.185], [0.4, -0.185] ]" RT orig
-      footprint: "[ [-0.24, -0.185], [-0.24, 0.185], [0.24,0.185], [0.24, -0.185] ]"
+      footprint: "[ [-0.09, -0.185], [-0.09, 0.185], [0.4,0.185], [0.4, -0.185] ]"
       resolution: 0.05                  #全局地图1像素的分辨率，以米为单位
       track_unknown_space: true
       plugins: ["static_layer", "obstacle_layer", "inflation_layer"] #插件包括：{“静态层”，“障碍层”，“膨胀层”}
@@ -287,8 +284,8 @@ global_costmap:
         map_subscribe_transient_local: True
       inflation_layer: #膨胀层参数
         plugin: "nav2_costmap_2d::InflationLayer"  #膨胀层插件
-        cost_scaling_factor: 3.0    #RT orig 10         #成本缩放因子，决定障碍物成本随距离的递减速度。
-        inflation_radius: 0.15        #RT orig 0.25             #膨胀半径
+        cost_scaling_factor: 10.0                   #成本缩放因子，决定障碍物成本随距离的递减速度。
+        inflation_radius: 0.25                     #膨胀半径
       always_send_full_costmap: True               #是否每次更新时都发送完整的成本图，而不是更新
   global_costmap_client:
     ros__parameters:
