--- a/wheeltec_lidar_ros2/lslidar_ros2/lslidar_driver/config/lslidar_cx.yaml
+++ b/wheeltec_lidar_ros2/lslidar_ros2/lslidar_driver/config/lslidar_cx.yaml
@@ -13,9 +13,9 @@ cx:
       pcl_type: false             # 点云类型  true: xyzi
       frame_id: "laser_link"      # RT orig laser 坐标系名称
       pointcloud_topic: "/point_cloud_raw"  # 点云话题名
-      use_time_service: true     # RT orig false 雷达是否使用授时(GPS PTP NTP)
+      use_time_service: false     # RT orig false 雷达是否使用授时(GPS PTP NTP)
       use_first_point_time: false # true: 使用每帧第一个点的时间做为点云时间
-      use_absolute_time: true    # RT orig false 点时间格式 true: 使用绝对时间  注意与点云头文件中USE_ABSOLUTE_TIME保持一致
+      use_absolute_time: false    # RT orig false 点时间格式 true: 使用绝对时间  注意与点云头文件中USE_ABSOLUTE_TIME保持一致
       min_range: 0.15             # 雷达扫描最小距离 小于该值的点将被过滤(m)
       max_range: 200.0            # 雷达扫描最大距离 大于该值的点将被过滤(m)
       #不屏蔽角度时 都为0    可以屏蔽单个角度或者多个角度
