--- a/wheeltec_robot_nav2/param/wheeltec_params/param_senior_akm.yaml
+++ b/wheeltec_robot_nav2/param/wheeltec_params/param_senior_akm.yaml
@@ -15,8 +15,8 @@ amcl:
     global_frame_id: "map"          #定位系统发布的坐标框架的名称
     lambda_short: 0.1               #模型 z_short 部分的指数衰减参数
     laser_likelihood_max_dist: 2.0  #在地图上进行障碍物膨胀的最大距离，用于似然场模型
-    laser_max_range: -1.0       #RT orig 100 #要考虑的最大扫描范围，-1.0 将导致使用激光报告的最大范围
-    laser_min_range: -1.0           #要考虑的最小扫描范围，-1.0 将导致使用激光报告的最小范围
+    laser_max_range: 25.0      #RT orig 100 #要考虑的最大扫描范围，-1.0 将导致使用激光报告的最大范围
+    laser_min_range: 0.2           #要考虑的最小扫描范围，-1.0 将导致使用激光报告的最小范围
     laser_model_type: "likelihood_field" #使用哪种模型，
     #beam、likelihood_field 或 unlikely_field_prob。与 unlikely_field 相同，但如果启用，则包含 beamskip 功能
     max_beams: 60                   #更新过滤器时每次扫描要使用多少个均匀分布的光束。
@@ -99,12 +99,12 @@ controller_server:
 
     progress_checker:
       plugin: "nav2_controller::SimpleProgressChecker"
-      required_movement_radius: 0.2            #RT orig 0.5 所需运动半径
-      movement_time_allowance: 15.0            #RT orig 10.0 移动时间容差
+      required_movement_radius: 0.5            #RT orig 0.5 所需运动半径
+      movement_time_allowance: 10.0            #RT orig 10.0 移动时间容差
     goal_checker:
       plugin: "nav2_controller::SimpleGoalChecker"
-      xy_goal_tolerance: 0.25                  #xy 目标容差
-      yaw_goal_tolerance: 0.25                 #yaw目标容差
+      xy_goal_tolerance: 0.10                 #xy 目标容差  RT orig 0.25
+      yaw_goal_tolerance: 0.15                 #yaw目标容差 RT orig 0.25
       stateful: True
 
     FollowPath:
@@ -123,9 +123,9 @@ controller_server:
       ax_min: -1.5
       ay_max: 0.0
       az_max: 1.5
-      iteration_count: 3 #RT orig 1 迭代次数
-      prune_distance: 0.8 #RT orig 1.5 路径上距离机器人最近点的距离（米）
-      enforce_path_inversion: false #RT orig true 
+      iteration_count: 1 #RT orig 1 迭代次数
+      prune_distance: 1.5 #RT orig 1.5 路径上距离机器人最近点的距离（米）
+      enforce_path_inversion: true #RT orig true 
       transform_tolerance: 0.5 #使用 TF（s）进行数据转换的时间容差 RT orig 0.1
       temperature: 0.3 #根据成本选择轨迹，0表示使用成本最佳的控制，巨大的值将导致仅取所有轨迹的平均值而不考虑成本。
       gamma: 0.015 #平滑度（高）和低能耗（低）之间的权衡,保持默认值
@@ -159,7 +159,7 @@ controller_server:
         cost_power: 1
         repulsion_weight: 1.5 #权重参数，通常优先选择成本较低的空间中的路线。
         critical_weight: 30.0 #应用于临界碰撞的权重，用于collision_margin_distance防止近距离碰撞
-        consider_footprint: true # RT orig false 是否使用点成本（如果机器人是圆形的或者计算能力低）或计算 SE2 足迹成本
+        consider_footprint: false # RT orig false 是否使用点成本（如果机器人是圆形的或者计算能力低）或计算 SE2 足迹成本
         collision_cost: 10000.0 #应用于轨迹中真实碰撞的成本。
         collision_margin_distance: 0.1 # RT orig 0.1 碰撞边缘距离，应该设置在0.05-0.2之间，请确保将此参数设置为预计机器人需要穿越的最窄空间
         near_goal_distance: 0.4 #靠近目标的距离（米）停止应用优先障碍物项，以允许机器人平稳地收敛到靠近障碍物的目标姿势，0.5 --> 0.6 -->0.3(Tues) 
@@ -219,7 +219,7 @@ local_costmap:
       resolution: 0.05     #代价地图1像素的分辨率，以米为单位
       #robot_radius: 0.20   #机器人半径，如果未提供足迹坐标，则使用机器人半径。
       #footprint: "[ [-0.09, -0.185], [-0.09, 0.185], [0.4,0.185], [0.4, -0.185] ]" RT Orig
-      footprint: "[ [-0.25, -0.185], [-0.25, 0.185], [0.25,0.17], [0.25, -0.185] ]"
+      footprint: "[ [-0.25, -0.185], [-0.25, 0.185], [0.25,0.185], [0.25, -0.185] ]"
       #footprint_padding: 0.02   #RT toegevoegd
       
       plugins: ["voxel_layer","inflation_layer"] #插件包括:{“体素层”，“障碍层”，“膨胀层”}
@@ -248,7 +248,7 @@ local_costmap:
           raytrace_min_range: 0.05                #RT orig 0.0控制光线追踪从代价地图中清除障碍物的最大范围 
           obstacle_max_range: 3.0                   #控制代价地图上标记障碍物的最大范围
           obstacle_min_range: 0.05                   #Rt orig 0.0控制代价地图上标记障碍物的最小范围
-          inf_is_valid: false                        #RT ← VOEG TOE: Negeer infinite readings
+          #inf_is_valid: false                        #RT ← VOEG TOE: Negeer infinite readings
 
       always_send_full_costmap: True                 #是否每次更新时都发送完整的成本图，而不是更新
   local_costmap_client:
@@ -268,7 +268,7 @@ global_costmap:
       use_sim_time: False               #仿真时间 
       #robot_radius: 0.20                #机器人半径
       #footprint: "[ [-0.09, -0.185], [-0.09, 0.185], [0.4,0.185], [0.4, -0.185] ]" RT orig
-      footprint: "[ [-0.25, -0.185], [-0.25, 0.185], [0.25,0.17], [0.25, -0.185] ]"
+      footprint: "[ [-0.25, -0.185], [-0.25, 0.185], [0.25,0.185], [0.25, -0.185] ]"
    
       resolution: 0.05                  #全局地图1像素的分辨率，以米为单位
       track_unknown_space: true
