--- a/wheeltec_robot_slam/wheeltec_slam_toolbox/config/mapper_params_online_async.yaml
+++ b/wheeltec_robot_slam/wheeltec_slam_toolbox/config/mapper_params_online_async.yaml
@@ -11,9 +11,9 @@ slam_toolbox:
     ceres_loss_function: None
 
     # ROS Parameters
-    odom_frame: odom_combined
+    odom_frame: odom #RT orig odom_combined
     map_frame: map
-    base_frame: base_footprint
+    base_frame: base_link #RT orig base_footprint
     scan_topic: /scan
     mode: mapping #localization
 
